<resources>
    <string name="app_name">BookList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Recherche</string>
    <string name="action_scan">Scan</string>
    <string name="action_language">Langue de la recherche</string>
    <string name="title_activity_book_details">Details</string>
    <string name="book_summary">Resumé :</string>
    <string name="to_read">A lire</string>
    <string name="own">J\'ai</string>
    <string name="wish">Souhaite</string>
    <string name="favorite">Favoris</string>

    <string name="navigation_drawer_title">Listes</string>
    <string name="title_activity_book_list">BookList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="list_wish">Liste de souhait</string>
    <string name="list_library">Bibliothèque</string>
    <string name="list_to_read">A lire</string>
    <string name="list_favorites">Favoris</string>
    <string name="book_note_hint">Notes...</string>

    <string name="dialog_language_message">Choix de la langue de recherche</string>
    <string name="lbl_book_authors">Par :</string>
    <string name="no_summary">Pas de résumé ou de description disponible pour ce livre</string>
    <string name="book_pages">%d pages</string>
    <string name="search_error">Search error</string>
    <string name="search_starting">search...</string>
    <string-array
        name="string_array_language">
        <item>anglais</item>
        <item>français</item>
        <item>allemand</item>
        <item>espagnol</item>
        <item>japonais</item>
    </string-array>

</resources>
