<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".BookListActivity">
      <item android:id="@+id/action_search"
            android:title="@string/action_search"
          app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.support.v7.widget.SearchView"
            android:icon="@android:drawable/ic_menu_search"  />
    <item android:id="@+id/action_scan"
          android:title="@string/action_scan"
          app:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_camera"/>

    <item android:id="@+id/action_language"
        android:title="@string/action_language"
        app:showAsAction="never"
    />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>